--- a/MundoAFora/MainPage.xaml
+++ b/MundoAFora/MainPage.xaml
@@ -7,9 +7,16 @@
     <VerticalStackLayout Padding="16" Spacing="12" WidthRequest="600" VerticalOptions="Center" HorizontalOptions="Center">
         
         <Grid RowDefinitions="*,*,*" HorizontalOptions="Center" VerticalOptions="Center">
-            <Image Source="logo_com_fundo.png" Grid.Row="0"  HeightRequest="400" HorizontalOptions="Center"/>
-            <Label Grid.Row="1" Text="Bem Vindo ao Mundo a Fora!" FontSize="40" FontAttributes="Bold" HorizontalOptions="Center" VerticalOptions="Center" TextColor="White"/>
-            <Button Grid.Row="2" Text="Iniciar" FontSize="32" FontAttributes="Bold" HorizontalOptions="Center" VerticalOptions="Center" BackgroundColor="DarkOliveGreen" Margin="10,30,0,40"/>
+            <Image Source="logo_com_fundo.png" Grid.Row="0" 
+                   HeightRequest="400" HorizontalOptions="Center" Margin="0,0,0,0"/>
+            
+            <Label Grid.Row="1" Text="Bem Vindo ao Mundo a Fora!" FontSize="40" FontAttributes="Bold"
+                   HorizontalOptions="Center" VerticalOptions="Center" TextColor="White" Margin="0,0,0,0"/>
+            
+            <Button Grid.Row="2" Text="Iniciar" FontSize="32" FontAttributes="Bold"
+                    HorizontalOptions="Center" VerticalOptions="Center" 
+                    BackgroundColor="DarkOliveGreen" Margin="10,30,0,40"
+                    Clicked="OnIniciarClicked"/>
 
 
 
