--- a/MundoAFora/Resources/Styles/Colors.xaml
+++ b/MundoAFora/Resources/Styles/Colors.xaml
@@ -4,7 +4,11 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
 
-    <!-- Note: For Android please see also Platforms\Android\Resources\values\colors.xml -->
+    <Color x:Key="Cotton">#f9f4ef</Color>
+    <Color x:Key="BlueWind">#9cbed4</Color>
+    <Color x:Key="Duna">#d7c9aa</Color>
+    <Color x:Key="GreenVacation">#a0b18a</Color>
+    <Color x:Key="GreenFlag">#6e7f2b</Color>
 
     <Color x:Key="Primary">#512BD4</Color>
     <Color x:Key="PrimaryDark">#ac99ea</Color>
