--- a/MundoAFora/Login.xaml
+++ b/MundoAFora/Login.xaml
@@ -1,33 +1,38 @@
-﻿<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+﻿<?xml version="1.0" encoding="utf-8" ?>
+    
+    <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MundoAFora.Login"
-    
-    <VerticalStackLayout VerticalOptions="Center" HorizontalOptions="Center">
+             BackgroundColor="{StaticResource Cotton}"
+            >
+			<VerticalStackLayout VerticalOptions="Center" HorizontalOptions="Center" BackgroundColor="{StaticResource Cotton}">
 
-    <Label Text="Tela de Login" FontSize="25" HorizontalOptions="Center" FontAttributes="Bold" />
-    <Grid RowDefinitions="*,*,*,*,*,*" VerticalOptions="Center" WidthRequest="400">
-        <!--CAMPO DE TEXTO EMAIL-->
-        <Label Grid.Row="0" Text="E-mail"  />
-        <Entry Grid.Row="1" x:Name="Email" Placeholder="ex. abcde@gmail.com.br"
+        <Label Text="Bem vindo de volta!" FontSize="25" HorizontalOptions="Center" FontAttributes="Bold" Margin="0,0,0,30" />
+        <Grid RowDefinitions="*,*,*,*,*,*,*" VerticalOptions="Center" WidthRequest="400">
+            <!--CAMPO DE TEXTO EMAIL-->
+            <Label Grid.Row="0" Text="E-mail"  />
+            <Entry Grid.Row="1" x:Name="Email" Placeholder="ex. abcde@gmail.com.br"
                    Margin="0,0,0,40"/>
 
-        <!--CAMPO DE TEXTO SENHA-->
-        <Label Grid.Row="2" Text="Senha"  />
-        <Entry Grid.Row="3" x:Name="Senha" Placeholder="********" 
+            <!--CAMPO DE TEXTO SENHA-->
+            <Label Grid.Row="2" Text="Senha"  />
+            <Entry Grid.Row="3" x:Name="Senha" Placeholder="********" 
                    Margin="0,0,0,40"/>
 
-        <!--BOTÃO ENTRAR-->
-        <Button Grid.Row="4" Text="Entrar" Margin="0,0,0,30" Clicked="OnEntrarClicked"/>
+			<Label VerticalOptions="Center" Grid.Row="6" Text="Caso não possua uma conta, cadastre-se já!" FontSize="15" TextColor="Black" Margin="50,0,0,30"/>
 
-        <!--BOTÃO CADASTRAR-->
-        <Button Grid.Row="5" Text="Cadastrar" Margin="0,0,0,30" Clicked="OnCadastrarClicked" BackgroundColor="Purple"/>
+            <!--BOTÃO ENTRAR-->
+            <Button Grid.Row="4" Text="Entrar" Margin="0,0,0,30" BackgroundColor="{StaticResource GreenFlag}"  />
+
+            <!--BOTÃO CADASTRAR-->
+            <Button Grid.Row="5" Text="Cadastrar" Margin="0,0,0,30" Clicked="OnCadastrarClicked" BackgroundColor="{StaticResource GreenVacation}" />
 
 
-    </Grid>
+        </Grid>
 
-    </VerticalStackLayout> >
+    </VerticalStackLayout>
 
-    
+
 
 
 </ContentPage>
