--- a/MundoAFora/CadastroUsuario.xaml
+++ b/MundoAFora/CadastroUsuario.xaml
@@ -8,22 +8,22 @@
 		<VerticalStackLayout VerticalOptions="Center" HorizontalOptions="Center">
 			<Label Text="Tela de Cadastro" FontSize="40" FontAttributes="Bold" HorizontalTextAlignment="Center" Margin="0,40,0,20"/>
 			<Grid RowDefinitions="*,*,*,*,*,*,*,*,*,*,*,*,*" WidthRequest="400">
-				<Label Grid.Row="0" Text="Nome completo"/>
+				<Label Grid.Row="0" Text="Nome completo:"/>
 				<Entry Grid.Row="1" Placeholder="João Silva" Margin="0,0,0,20"/>
 				
 				<Label Grid.Row="2" Text="CPF:" Margin="0,0,0,0"/>
 				<Entry Grid.Row="3" Placeholder="***.***.***-**" Margin="0,0,0,20"/>
 				
-				<Label Grid.Row="4" Text="Data de nascimento" Margin="0,0,0,0"/>
+				<Label Grid.Row="4" Text="Data de nascimento:" Margin="0,0,0,0"/>
 				<DatePicker Grid.Row="5" x:Name="DataNascimento" Margin="0,0,0,20"/>
 				
-				<Label Grid.Row="6" Text="E-mail"/>
+				<Label Grid.Row="6" Text="E-mail:"/>
 				<Entry Grid.Row="7" Placeholder="exemplo@exemplo.com.br" Margin="0,0,0,20"/>
 				
-				<Label Grid.Row="8" Text="Senha"/>
+				<Label Grid.Row="8" Text="Senha:"/>
 				<Entry Grid.Row="9" Placeholder="******" Margin="0,0,0,20"/>
 				
-				<Label Grid.Row="10" Text="Confirme a Senha"/>
+				<Label Grid.Row="10" Text="Confirme a Senha:"/>
 				<Entry Grid.Row="11" Placeholder="******" Margin="0,0,0,20"/>		
 			
 						
