--- a/MundoAFora/MainPage.xaml
+++ b/MundoAFora/MainPage.xaml
@@ -15,17 +15,20 @@
                   HeightRequest="100">
 
                 <!-- Logo -->
-                <Image Source="logo_sem_fundo.png"
+                <Image Grid.Column="0"
+                    Source="logo_sem_fundo.png"
                        WidthRequest="120"
-                       VerticalOptions="Center"/>
+                       VerticalOptions="Center"
+                       HorizontalOptions="Start" />
 
                 <!-- Nome -->
-                <Label Grid.Column="1"
+                <Label Grid.Column="0"
                        Text="Mundo a Fora"
                        FontSize="35"
                        FontAttributes="Bold"
                        VerticalOptions="Center"
-                       HorizontalOptions="Center"/>
+                       HorizontalOptions="Center"
+                       Margin="100,0,0,0"/>
 
                 <!-- Menu -->
                 <Button Grid.Column="2"
@@ -45,27 +48,27 @@
                         HorizontalOptions="Center"/>
                 
                 <Button Grid.Column="4"
-        Text="Entrar"
-        BackgroundColor="Gray"
-        TextColor="White"
-        FontAttributes="Bold"
-        FontSize="16"
-        CornerRadius="20"
-        WidthRequest="120"
-        HeightRequest="70"
-        HorizontalOptions="End" 
+                        Text="Entrar"
+                        BackgroundColor="Gray"
+                        TextColor="White"
+                        FontAttributes="Bold"
+                        FontSize="16"
+                        CornerRadius="20"
+                        WidthRequest="120"
+                        HeightRequest="70"
+                        HorizontalOptions="End" 
                          Margin="0,0,10,0"/>
 
                 <Button Grid.Column="5"
-        Text="Cadastrar"
-        BackgroundColor="Gray"
-        TextColor="White"
-        FontAttributes="Bold"
-        FontSize="16"
-        CornerRadius="20"
-        WidthRequest="120"
-        HeightRequest="70"
-        HorizontalOptions="Center" />
+                        Text="Cadastrar"
+                        BackgroundColor="Gray"
+                        TextColor="White"
+                        FontAttributes="Bold"
+                        FontSize="16"
+                        CornerRadius="20"
+                        WidthRequest="120"
+                        HeightRequest="70"
+                        HorizontalOptions="Center" />   
             </Grid>
         </Border>
 
