--- a/MundoAFora/AppShell.xaml
+++ b/MundoAFora/AppShell.xaml
@@ -7,9 +7,9 @@
     Title="MundoAFora">
 
     <ShellContent
-        Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
+        Title="Login"
+        ContentTemplate="{DataTemplate local:Login}"
+        Route="Login" />
     
     
 
