--- a/MundoAFora/MainPage.xaml
+++ b/MundoAFora/MainPage.xaml
@@ -2,28 +2,26 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MundoAFora.MainPage"
-             BackgroundColor="Black">
+             BackgroundColor="{StaticResource Cotton}">
 
-    <VerticalStackLayout Padding="16" Spacing="12" WidthRequest="600" VerticalOptions="Center" HorizontalOptions="Center">
+
+    <VerticalStackLayout Padding="16" Spacing="12">
+        <Border Stroke="Black" StrokeShape="20" WidthRequest="1870" HeightRequest="100">
+        <Grid ColumnDefinitions="*,*,*,*,*,*" RowDefinitions="Auto" BackgroundColor="{StaticResource GreenFlag}" HeightRequest="100" Margin="0,0,0,0"  >
         
-        <Grid RowDefinitions="*,*,*" HorizontalOptions="Center" VerticalOptions="Center">
-            <Image Source="logo_com_fundo.png" Grid.Row="0" 
-                   HeightRequest="400" HorizontalOptions="Center" Margin="0,0,0,0"/>
-            
-            <Label Grid.Row="1" Text="Bem Vindo ao Mundo a Fora!" FontSize="40" FontAttributes="Bold"
-                   HorizontalOptions="Center" VerticalOptions="Center" TextColor="White" Margin="0,0,0,0"/>
-            
-            <Button Grid.Row="2" Text="Iniciar" FontSize="32" FontAttributes="Bold"
-                    HorizontalOptions="Center" VerticalOptions="Center" 
-                    BackgroundColor="DarkOliveGreen" Margin="10,30,0,40"
-                    Clicked="OnIniciarClicked"/>
+        <Image Source="logo_sem_fundo.png"  Margin="0,0,150,300" HorizontalOptions="Center"/>
+            <Label Grid.Column="0" Grid.Row="0"  Text="MUNDO A FORA" FontSize="18" FontAttributes="Bold" Margin="0,35,0,0" HorizontalOptions="End"/>
+
+
+
 
 
 
 
         </Grid>
-
+        </Border>
     </VerticalStackLayout>
+    
        
 
 </ContentPage>
