--- a/MundoAFora/PerfilUsuario.xaml
+++ b/MundoAFora/PerfilUsuario.xaml
@@ -1,7 +1,7 @@
-﻿<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+﻿ ﻿<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MundoAFora.PerfilUsuario"
-             BackgroundColor="{StaticResource Cotton}"
+                 BackgroundColor="{StaticResource Cotton}"
 			 >
 
 
@@ -35,11 +35,11 @@
 
                     <Label Grid.Column="1" Text="Tipo de perfil:" Grid.Row='3' FontAttributes="Bold" Margin="0,0,0,30" VerticalOptions="Center"/>
                     <Picker Grid.Column="1" Grid.Row="3"  Margin="0,50,0,00" WidthRequest="300" VerticalOptions="Center">
-                    <Picker.Items>
-                        <x:String>Imigrante</x:String>
-                        <x:String>Residente</x:String>
-                        <x:String>Turista</x:String>
-                    </Picker.Items>
+                        <Picker.Items>
+                            <x:String>Imigrante</x:String>
+                            <x:String>Residente</x:String>
+                            <x:String>Turista</x:String>
+                        </Picker.Items>
                     </Picker>
 
                     <Button Grid.Column="1" Text="Salvar" Grid.Row="4" FontAttributes="Bold" BackgroundColor="{StaticResource GreenFlag}"  VerticalOptions="Center" Margin="0,200,0,0" Clicked="OnSalvarClicked"/>
